--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,7 +8,7 @@ sql:
         package: "db"
         out: "internal/db"
         emit_json_tags: true
-        emit_prepared_queries: true
+        emit_prepared_queries: false
         emit_interface: true
         emit_db_tags: true
         emit_methods_with_db_argument: true
