--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,7 +6,7 @@ sql:
     gen:
       go:
         package: "db"
-        out: "db"
+        out: "db/generated"
         emit_json_tags: true
         emit_prepared_queries: false
         emit_interface: true
