--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,7 +5,7 @@ sql:
     schema: "db/migrations/"
     gen:
       go:
-        package: "db"
+        package: "generated"
         out: "db/generated"
         emit_json_tags: true
         emit_prepared_queries: false
