--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,6 +11,6 @@ sql:
         emit_prepared_queries: false
         emit_interface: true
         emit_db_tags: true
-        emit_methods_with_db_argument: true
+        emit_methods_with_db_argument: false
         omit_unused_structs: true
         sql_package: "pgx/v5"
