--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,12 +1,12 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "db/queries/"
-    schema: "db/migrations/"
+    queries: "internal/database/queries/"
+    schema: "internal/database/migrations/"
     gen:
       go:
         package: "generated"
-        out: "db/generated"
+        out: "internal/database/generated"
         emit_json_tags: true
         emit_prepared_queries: false
         emit_interface: true
